--- a/Tp3/Tp3/Tp3.csproj
+++ b/Tp3/Tp3/Tp3.csproj
@@ -52,11 +52,21 @@
     <Compile Include="FrGeneradorDist.Designer.cs">
       <DependentUpon>FrGeneradorDist.cs</DependentUpon>
     </Compile>
+    <Compile Include="Informes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Informes.Designer.cs">
+      <DependentUpon>Informes.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Servicios\Generador.cs" />
+    <Compile Include="Servicios\Registro.cs" />
     <EmbeddedResource Include="FrGeneradorDist.resx">
       <DependentUpon>FrGeneradorDist.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Informes.resx">
+      <DependentUpon>Informes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
